data/derived/comb/progs/unify/prog4428.ml.out
Characters 74-86:
  ((List.length l1) -1,(mulByDigit x*(10**i) l2)::j)in
                        ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
